--- a/Exercise Files/Ch02/02_01/start/index.html
+++ b/Exercise Files/Ch02/02_01/start/index.html
@@ -15,7 +15,15 @@
   <body>
     <div id="root"></div>
     <script type="text/javascript">
-      ReactDOM.render(React.createElement("h1", null, "Getting Started with React"), document.getElementById("root"));
+        let ul = React.createElement("ul", {style: {color: "blue"}},
+          React.createElement("li", null, "save"),
+          React.createElement("li", null, "me"),
+          React.createElement("li", null, "JSX")
+        )
+        //let heading = React.createElement("h1", null, "Getting Started with React!!")
+        //ReactDOM.render(heading, document.getElementById("root"));
+        ReactDOM.render(ul, document.getElementById("root"));
+        //ReactDOM.render(React.createElement("h1", null, "Getting Started with React"), document.getElementById("root"));
     </script>
   </body>
 </html>
