--- a/Exercise Files/Ch02/02_01/start/index.html
+++ b/Exercise Files/Ch02/02_01/start/index.html
@@ -10,20 +10,31 @@
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
     ></script>
+    <script
+      src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <title>React ⚛️</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript">
-        let ul = React.createElement("ul", {style: {color: "blue"}},
+    <!--<script type="text/javascript">-->
+        <script type="text/babel">
+        /*let ul = React.createElement("ul", {style: {color: "blue"}},
           React.createElement("li", null, "save"),
           React.createElement("li", null, "me"),
           React.createElement("li", null, "JSX")
-        )
+        )*/
         //let heading = React.createElement("h1", null, "Getting Started with React!!")
         //ReactDOM.render(heading, document.getElementById("root"));
-        ReactDOM.render(ul, document.getElementById("root"));
+        //ReactDOM.render(ul, document.getElementById("root"));
         //ReactDOM.render(React.createElement("h1", null, "Getting Started with React"), document.getElementById("root"));
+        ReactDOM.render(
+          <ul>
+            <li>🤖</li>
+            <li>🤠</li>
+            <li>🌝</li>
+          </ul>,
+          document.getElementById("root")
+        )
     </script>
   </body>
 </html>
