--- a/Exercise Files/Ch03/03_03/start/index.html
+++ b/Exercise Files/Ch03/03_03/start/index.html
@@ -27,10 +27,11 @@
       function Main(props) {
         return (
           <section>
-            <p>
-              We serve the most {props.adjective}{" "}
-              food around.
-            </p>
+            <ul>
+              {props.dishes.map((dish) => (
+                <li>{dish}</li>
+              ))}
+            </ul>
           </section>
         );
       }
@@ -43,11 +44,20 @@
         );
       }
 
+      const dishes = [
+        "Black Bean Soup",
+        "Macaroni and Cheese",
+        "Salmon and Potatoes"
+      ];
+
       function App() {
         return (
           <div>
-            <Header name="Cindy" />
-            <Main adjective="amazing" />
+            <Header name="Bucheli" />
+            <Main
+              adjective="amazing"
+              dishes={dishes}
+            />
             <Footer
               year={new Date().getFullYear()}
             />
@@ -62,3 +72,4 @@
     </script>
   </body>
 </html>
+
